--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="mobile-noaccess">
+    <!-- <div class="mobile-noaccess">
         <span>Извините, но у вас нет доступа к этому сайту. Чтобы войти, пожалуйста, используйте устройство шириной не менее 320 пикселей.</span>    
-    </div>
+    </div> -->
     <div class="container">
         <div class="avatar">
             <img src="/assets/images/avatar.jpg" width="35%">
