--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div> -->
     <div class="container">
         <div class="avatar">
-            <img src="/assets/images/avatar.jpg" width="35%">
+            <img src="./assets/images/avatar.jpg" width="35%">
         </div>
         <div class="nickname">
             <span class="nickname">dontkillme</span>
@@ -39,14 +39,14 @@
         </div>
         <hr>
         <div class="player">
-            <audio src="/assets/audio/background-music.mp3" id="audio" autoplay></audio>
+            <audio src="./assets/audio/background-music.mp3" id="audio" autoplay></audio>
             <div class="controls">
                 <button class="mute"><i class="fa fa-volume-up" aria-hidden="true" id="mute"></i></button>
                 <button id="play-pause" class="play"><i class="fas fa-pause-circle" aria-hidden="true" id="ppsbutt"></i></button><span id="current-time">0:00</span><input type="range" name="seek" id="seek-bar" value="0"><span id="duration">0:00</span>
             </div>
         </div>
     </div>
-<script src="/js/main.js"></script>
-<script src="/js/index.js"></script>
+<script src="./js/main.js"></script>
+<script src="./js/index.js"></script>
 </body>
 </html>
