--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta author="dontkillme">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/index.css">
     <script src="https://kit.fontawesome.com/9accee02f9.js" crossorigin="anonymous"></script>
     <style media="all" id="fa-v4-font-face">/*!
         * Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com
@@ -39,14 +39,14 @@
         </div>
         <hr>
         <div class="player">
-            <audio src="./assets/audio/background-music.mp3" id="audio" autoplay></audio>
+            <audio src="/assets/audio/background-music.mp3" id="audio" autoplay></audio>
             <div class="controls">
                 <button class="mute"><i class="fa fa-volume-up" aria-hidden="true" id="mute"></i></button>
                 <button id="play-pause" class="play"><i class="fas fa-pause-circle" aria-hidden="true" id="ppsbutt"></i></button><span id="current-time">0:00</span><input type="range" name="seek" id="seek-bar" value="0"><span id="duration">0:00</span>
             </div>
         </div>
     </div>
-<script src="./js/main.js"></script>
-<script src="./js/index.js"></script>
+<script src="/js/main.js"></script>
+<script src="/js/index.js"></script>
 </body>
 </html>
