--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <hr>
         <div class="player">
-            <audio src="/assets/audio/background-music.mp3" id="audio" autoplay></audio>
+            <audio src="./assets/audio/background-music.mp3" id="audio" autoplay></audio>
             <div class="controls">
                 <button class="mute"><i class="fa fa-volume-up" aria-hidden="true" id="mute"></i></button>
                 <button id="play-pause" class="play"><i class="fas fa-pause-circle" aria-hidden="true" id="ppsbutt"></i></button><span id="current-time">0:00</span><input type="range" name="seek" id="seek-bar" value="0"><span id="duration">0:00</span>
