--- a/404.html
+++ b/404.html
@@ -31,6 +31,6 @@
         <p>This page is currently unavailable. Perhaps this is our mistake. If you are sure that the error is not on your side, please report it by clicking on the button below.</p>
         <a class="btn btn-dark btn-lg " href="https://discordapp.com/users/531462564304125962" role="button"><i class="fab fa-discord" aria-hidden="true"></i> Discord</a>
     </div>
-<script src="./js/index.js"></script>
+<script src="./js/main.js"></script>
 </body>
 </html>
