--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <a href="https://discordapp.com/users/531462564304125962" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord" aria-hidden="true"></i></a>
             <a href="https://steamcommunity.com/profiles/76561198858868268/" target="_blank" rel="noopener noreferrer"><i class="fab fa-steam" aria-hidden="true"></i></a>
             <a href="https://github.com/1dontkillme" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" aria-hidden="true"></i></a>
+            <a href="https://t.me/m/kZePPo93OTIy" target="_blank" rel="noopener noreferrer"><i class="fab fa-telegram" aria-hidden="true"></i></a>
         </div>
         <hr>
         <div class="player">
