--- a/404.html
+++ b/404.html
@@ -28,8 +28,9 @@
 <body>
     <div class="container">
         <h1>Oops! We got a some problems</h1>
-        <p>This page is currently unavailable. Perhaps this is our mistake. If you are sure that the error is not on your side, please report it by clicking on the button below.</p>
+        <p>This page is currently unavailable. Perhaps this is our mistake. If you are sure that the error is not on your side, please report it by clicking on the buttons below.</p>
         <a class="btn btn-dark btn-lg " href="https://discordapp.com/users/531462564304125962" role="button"><i class="fab fa-discord" aria-hidden="true"></i> Discord</a>
+        <a class="btn btn-dark btn-lg " href="https://t.me/m/kZePPo93OTIy" role="button"><i class="fab fa-telegram" aria-hidden="true"></i> Telegram</a>
     </div>
 <script src="./js/main.js"></script>
 </body>
