--- a/upload.html
+++ b/upload.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta author="dontkillme">
-    <title>Page not found!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/404.css">
+    <link rel="stylesheet" href="./css/upload.css">
     <script src="https://kit.fontawesome.com/9accee02f9.js" crossorigin="anonymous"></script>
     <style media="all" id="fa-v4-font-face">/*!
         * Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com
@@ -19,7 +18,7 @@
         * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
         * Copyright 2024 Fonticons, Inc.
         */@font-face{font-family:"Font Awesome 5 Brands";font-display:block;font-weight:400;src:url(https://ka-f.fontawesome.com/releases/v6.5.2/webfonts/free-fa-brands-400.woff2) format("woff2"),url(https://ka-f.fontawesome.com/releases/v6.5.2/webfonts/free-fa-brands-400.ttf) format("truetype")}@font-face{font-family:"Font Awesome 5 Free";font-display:block;font-weight:900;src:url(https://ka-f.fontawesome.com/releases/v6.5.2/webfonts/free-fa-solid-900.woff2) format("woff2"),url(https://ka-f.fontawesome.com/releases/v6.5.2/webfonts/free-fa-solid-900.ttf) format("truetype")}@font-face{font-family:"Font Awesome 5 Free";font-display:block;font-weight:400;src:url(https://ka-f.fontawesome.com/releases/v6.5.2/webfonts/free-fa-regular-400.woff2) format("woff2"),url(https://ka-f.fontawesome.com/releases/v6.5.2/webfonts/free-fa-regular-400.ttf) format("truetype")}</style>
-    <title>Oops! We got a some problems!</title>
+    <title>Upload</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
@@ -27,14 +26,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Oops! We got a some problems!</h1>
-        <p>This page is currently unavailable. Perhaps this is our mistake. If you are sure that the error is not on your side, please report it by clicking on the buttons below.</p>
-        <div class="button-container">
-            <a class="btn btn-dark btn-lg" href="https://discordapp.com/users/531462564304125962" role="button"><i class="fab fa-discord" aria-hidden="true"></i> Discord</a>
-            <a class="btn btn-dark btn-lg" href="https://t.me/m/kZePPo93OTIy" role="button"><i class="fab fa-telegram" aria-hidden="true"></i> Telegram</a>
-            <a class="btn btn-dark btn-lg" onclick="goBack()" role="button"><i class="fas fa-circle-left"></i> Go back</a>
-        </div>
+        <form action="./request_upload.php" method="post" enctype="multipart/form-data">
+            <label for="fileToUpload">Choose file (Only images) <span style="color: red;">*</span></label><br>
+            <input type="file" name="fileToUpload" id="fileToUpload" accept="image/*" multiple required><br><br>
+            <button type="submit" class="btn btn-dark btn-lg">Submit</button>
+        </form>
     </div>
 <script src="./js/main.js"></script>
+<script src="./js/upload.js"></script>
 </body>
 </html>
