--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                 <a href="https://steamcommunity.com/profiles/76561198858868268/" target="_blank" rel="noopener noreferrer"><i class="fab fa-steam" aria-hidden="true"></i></a>
                 <a href="https://github.com/1dontkillme" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" aria-hidden="true"></i></a>
                 <a href="https://t.me/m/kZePPo93OTIy" target="_blank" rel="noopener noreferrer"><i class="fab fa-telegram" aria-hidden="true"></i></a>
-                <a href="#skills" id="scrollToTarget"><i class="fa fa-cogs" aria-hidden="true"></i></a>
             </div>
             <hr>
             <div class="player">
@@ -49,12 +48,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="experience-container" id="skills">
-        <h1>Overall</h1>
-        <p>I've been interested in web development since the age of 15, but never attempted to create websites until I almost 16 because I never knew where to start. By the end of my education, I hope to secure a rewarding job in web development, as it is a lifelong passion of mine.</p>
-        <h2>Skills</h2>
-        <div class="marquee-container">
+        <hr>
+        <!-- <div class="marquee-container">
             <div class="marquee">
                 <ul>
                     <a href="https://getbootstrap.com/"><li class="skillblock bootstrap">
@@ -74,7 +69,7 @@
                     </li></a>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </div>
 <script src="./js/main.js"></script>
 <script src="./js/index.js"></script>
