--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta author="dontkillme">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
     <script src="https://kit.fontawesome.com/9accee02f9.js" crossorigin="anonymous"></script>
     <style media="all" id="fa-v4-font-face">/*!
         * Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com
@@ -22,9 +26,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
     <link rel="manifest" href="./assets/site.webmanifest">
+    <script>
+          $( function() {
+    $( document ).tooltip();
+  } );
+    </script>
 </head>
 <body>
-    <div class="container">
+    <div class="minecontainer">
         <div class="profile-container" id="profile">
             <div class="avatar">
                 <img src="./assets/images/avatar.jpg" width="35%">
@@ -33,45 +42,55 @@
                 <span class="nickname">dontkillme</span>
             </div>
             <div class="social-icons">
-                <a href="https://www.youtube.com/channel/UC8QwVfpZz3lL8mRZoajFQqQ" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube" aria-hidden="true"></i></a>
-                <a href="https://discordapp.com/users/531462564304125962" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord" aria-hidden="true"></i></a>
-                <a href="https://steamcommunity.com/profiles/76561198858868268/" target="_blank" rel="noopener noreferrer"><i class="fab fa-steam" aria-hidden="true"></i></a>
-                <a href="https://github.com/1dontkillme" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" aria-hidden="true"></i></a>
-                <a href="https://t.me/m/kZePPo93OTIy" target="_blank" rel="noopener noreferrer"><i class="fab fa-telegram" aria-hidden="true"></i></a>
+                <a href="https://www.youtube.com/channel/UC8QwVfpZz3lL8mRZoajFQqQ" target="_blank" rel="noopener noreferrer" class="youtube" aria-describedby="tooltip youtube" title="YouTube"><i class="fab fa-youtube" aria-hidden="true"></i></a>
+                <a href="https://discordapp.com/users/531462564304125962" target="_blank" rel="noopener noreferrer" class="discord"><i class="fab fa-discord" aria-hidden="true" title="Discord"></i></a>
+                <a href="https://steamcommunity.com/profiles/76561198858868268/" target="_blank" rel="noopener noreferrer" class="steam" title="Steam"><i class="fab fa-steam" aria-hidden="true"></i></a>
+                <a href="https://github.com/1dontkillme" target="_blank" rel="noopener noreferrer" class="github" title="GitHub"><i class="fab fa-github" aria-hidden="true"></i></a>
+                <a href="https://t.me/m/kZePPo93OTIy" target="_blank" rel="noopener noreferrer" class="telegram" title="Telegram"><i class="fab fa-telegram" aria-hidden="true"></i></a>
             </div>
             <hr>
             <div class="player">
                 <audio src="./assets/audio/background-music.mp3" id="audio" autoplay preload="auto"></audio>
                 <div class="controls">
-                    <button class="mute"><i class="fa fa-volume-up" aria-hidden="true" id="mute"></i></button>
-                    <button id="play-pause" class="play"><i class="fas fa-pause-circle" aria-hidden="true" id="ppsbutt"></i></button><span id="current-time">0:00</span><input type="range" name="seek" id="seek-bar" value="0"><span id="duration">0:00</span>
+                    <button class="mute" title="Mute music"><i class="fa fa-volume-up" aria-hidden="true" id="mute"></i></button>
+                    <button id="play-pause" class="play" title="Play or Pause music"><i class="fas fa-pause-circle" aria-hidden="true" id="ppsbutt"></i></button><span id="current-time">0:00</span><input type="range" name="seek" id="seek-bar" value="0"><span id="duration">0:00</span>
                 </div>
             </div>
-        </div>
-        <!-- <hr> -->
-        <!-- <div class="marquee-container">
-            <div class="marquee">
-                <ul>
-                    <a href="https://getbootstrap.com/"><li class="skillblock bootstrap">
-                        <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo-shadow.png" width="32px" draggable="false" class="h6"> <span>Bootstrap</span>
-                    </li></a>
-                    <a href="https://developer.mozilla.org/en-US/docs/Web/CSS"><li class="skillblock css">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" width="32px" draggable="false" alt="" class="h6"> <span>CSS</span>
-                    </li></a>
-                    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML"><li class="skillblock html">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" width="32px" draggable="false" alt="" class="h6"> <span>HTML</span>
-                    </li></a>
-                    <a href="https://www.cloudflare.com/"><li class="skillblock cloudflare">
-                        <img src="https://r2.e-z.host/2082d908-7c65-4fc3-b02a-5f50f9141543/me2uv8xk95n010sdwz.png" width="32px" draggable="false" alt="" class="h6"> <span>Cloudflare</span>
-                    </li></a>
-                    <a href="https://www.javascript.com/"><li class="skillblock js">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" width="32px" draggable="false" alt="" class="h6"> <span>JavaScript</span>
-                    </li></a>
-                </ul>
+            <div class="marquee-container">
+                <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();" loop>
+                    <ul>
+                        <li>
+                            <a href="https://getbootstrap.com/" target="_blank" rel="noopener noreferrer"><div class="marquee-content bootstrap rounded-default"><img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo-shadow.png" class="h-6" draggable="false"> <span>Bootstrap</span></div></a>
+                        </li>
+                        <li>
+                            <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank" rel="noopener noreferrer"><div class="marquee-content html rounded-default"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="h-6" draggable="false"> <span>HTML</span></div></a>
+                        </li>
+                        <li>
+                            <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" rel="noopener noreferrer"><div class="marquee-content css rounded-default"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="h-6" draggable="false"> <span>CSS</span></div></a>
+                        </li>
+                        <li>
+                            <a href="https://jquery.com/" target="_blank" rel="noopener noreferrer"><div class="marquee-content jquery rounded-default"><img src="/assets/images/file646cb188c7fb8.png" class="h-6" draggable="false"> <span>jQuery</span></div></a>
+                        </li>
+                        <li>
+                            <a href="https://www.cloudflare.com/" target="_blank" rel="noopener noreferrer"><div class="marquee-content cloudflare rounded-default"><img src="https://r2.e-z.host/2082d908-7c65-4fc3-b02a-5f50f9141543/me2uv8xk95n010sdwz.png" class="h-6" draggable="false"> <span>Cloudflare</span></div></a>
+                        </li>
+                        <li>
+                            <a href="https://www.javascript.com/" target="_blank" rel="noopener noreferrer"><div class="marquee-content javascript rounded-default"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="h-6" draggable="false"> <span>JavaScript</span></div></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/" rel="noopener noreferrer"><div class="marquee-content github rounded-default"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="h-6" draggable="false"> <span>GitHub</span></div></a>
+                        </li>
+                    </ul>
+                </marquee>
+            </div><br>
+            <a data-bs-toggle="collapse" href="#collapseOverall">Overall <i class="fa fa-plus-circle" aria-hidden="true" style="font-size: 14px; color: inherit;"></i></a>
+            <div class="collapse" id="collapseOverall">
+                I've been interested in web development since 15 years, but never attempted to create websites until I almost 16 because I never knew where to start. By the end of my education, I hope to secure a rewarding job in web development, as it is a lifelong passion of mine.
             </div>
-        </div> -->
+        </div>
     </div>
 <script src="./js/main.js"></script>
 <script src="./js/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
