--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta author="dontkillme">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/index.css">
     <script src="https://kit.fontawesome.com/9accee02f9.js" crossorigin="anonymous"></script>
     <style media="all" id="fa-v4-font-face">/*!
         * Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com
@@ -22,40 +19,65 @@
         * Copyright 2024 Fonticons, Inc.
         */@font-face{font-family:"Font Awesome 5 Brands";font-display:block;font-weight:400;src:url(https://ka-f.fontawesome.com/releases/v6.5.2/webfonts/free-fa-brands-400.woff2) format("woff2"),url(https://ka-f.fontawesome.com/releases/v6.5.2/webfonts/free-fa-brands-400.ttf) format("truetype")}@font-face{font-family:"Font Awesome 5 Free";font-display:block;font-weight:900;src:url(https://ka-f.fontawesome.com/releases/v6.5.2/webfonts/free-fa-solid-900.woff2) format("woff2"),url(https://ka-f.fontawesome.com/releases/v6.5.2/webfonts/free-fa-solid-900.ttf) format("truetype")}@font-face{font-family:"Font Awesome 5 Free";font-display:block;font-weight:400;src:url(https://ka-f.fontawesome.com/releases/v6.5.2/webfonts/free-fa-regular-400.woff2) format("woff2"),url(https://ka-f.fontawesome.com/releases/v6.5.2/webfonts/free-fa-regular-400.ttf) format("truetype")}</style>
     <title>dontkillme</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
-    <link rel="manifest" href="./assets/site.webmanifest">
-    <script>
-          $( function() {
-    $( document ).tooltip();
-  } );
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+    <link rel="manifest" href="/assets/site.webmanifest">
+    <script type="text/javascript">
+        document.ondragstart = noselect;
+        document.onselectstart = noselect;
+        document.oncontextmenu = noselect;
+        function noselect() {return false;}
     </script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+    </style>
 </head>
 <body>
-    <div class="minecontainer">
+<main>
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="toast-header bg-dark">
+            <img src="/assets/images/avatar.jpg" class="rounded me-2" style="width: 23px;">
+            <strong class="me-auto bg-dark" style="color: white;">dontkillme</strong>
+            <small style="color: white;">Just now</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close" data-bs-toggle="tooltip" title="Close" data-bs-autohide="false"></button>
+          </div>
+          <div class="toast-body bg-dark" style="color: white;">
+            The policy of all browsers prohibits auto-playback of content (including music) if you have not interacted with the site before. Right now I don't have the resources and time to fix it. I will do it ASAP, thanks for your understanding!
+          </div>
+        </div>
+      </div>
+    <div class="minecontainer center-hv">
         <div class="profile-container" id="profile">
+            <div class="visitcount">
+                <p><i class="fa fa-eye" aria-hidden="true" style="font-size: 20px;"></i>&nbsp;<span id="visit-count" style="font-size: 20px;">0</span></p>
+            </div>
             <div class="avatar">
-                <img src="./assets/images/avatar.jpg" width="35%">
+                <img src="./assets/images/avatar.jpg" width="35%" class="rounded-circle">
             </div>
             <div class="nickname">
                 <span class="nickname">dontkillme</span>
             </div>
             <div class="social-icons">
-                <a href="https://www.youtube.com/channel/UC8QwVfpZz3lL8mRZoajFQqQ" target="_blank" rel="noopener noreferrer" class="youtube" aria-describedby="tooltip youtube" title="YouTube"><i class="fab fa-youtube" aria-hidden="true"></i></a>
-                <a href="https://discordapp.com/users/531462564304125962" target="_blank" rel="noopener noreferrer" class="discord"><i class="fab fa-discord" aria-hidden="true" title="Discord"></i></a>
-                <a href="https://steamcommunity.com/profiles/76561198858868268/" target="_blank" rel="noopener noreferrer" class="steam" title="Steam"><i class="fab fa-steam" aria-hidden="true"></i></a>
-                <a href="https://github.com/1dontkillme" target="_blank" rel="noopener noreferrer" class="github" title="GitHub"><i class="fab fa-github" aria-hidden="true"></i></a>
-                <a href="https://t.me/m/kZePPo93OTIy" target="_blank" rel="noopener noreferrer" class="telegram" title="Telegram"><i class="fab fa-telegram" aria-hidden="true"></i></a>
+                <a href="https://www.youtube.com/channel/UC8QwVfpZz3lL8mRZoajFQqQ" target="_blank" rel="noopener noreferrer" class="youtube" aria-describedby="tooltip youtube" data-bs-toggle="tooltip" title="YouTube"><i class="fab fa-youtube" aria-hidden="true"></i></a>
+                <a href="https://discordapp.com/users/531462564304125962" target="_blank" rel="noopener noreferrer" class="discord" ><i class="fab fa-discord" aria-hidden="true" data-bs-toggle="tooltip" title="Discord"></i></a>
+                <a href="https://steamcommunity.com/profiles/76561198858868268/" target="_blank" rel="noopener noreferrer" class="steam" data-bs-toggle="tooltip" title="Steam"><i class="fab fa-steam" aria-hidden="true"></i></a>
+                <a href="https://github.com/1dontkillme" target="_blank" rel="noopener noreferrer" class="github" data-bs-toggle="tooltip" title="GitHub"><i class="fab fa-github" aria-hidden="true"></i></a>
+                <a href="https://t.me/m/kZePPo93OTIy" target="_blank" rel="noopener noreferrer" class="telegram" data-bs-toggle="tooltip" title="Telegram"><i class="fab fa-telegram" aria-hidden="true"></i></a>
+                <a href="mailto:abldtesttt@gmail.com" class="email" data-bs-toggle="tooltip" title="E-Mail"><i class="fa fa-envelope" aria-hidden="true"></i></a>
             </div>
             <hr>
             <div class="player">
                 <audio src="./assets/audio/background-music.mp3" id="audio" autoplay preload="auto"></audio>
                 <div class="controls">
-                    <button class="mute" title="Mute music"><i class="fa fa-volume-up" aria-hidden="true" id="mute"></i></button>
-                    <button id="play-pause" class="play" title="Play or Pause music"><i class="fas fa-pause-circle" aria-hidden="true" id="ppsbutt"></i></button><span id="current-time">0:00</span><input type="range" name="seek" id="seek-bar" value="0"><span id="duration">0:00</span>
+                    <button type="button" id="liveToastBtn" data-bs-toggle="tooltip" title="Why didn't the music start automatically?"><i class="fas fa-question-circle" aria-hidden="true"></i></button>
+                    <button class="mute" data-bs-toggle="tooltip" title="Mute music"><i class="fa fa-volume-up" aria-hidden="true" id="mute"></i></button>
+                    <button id="play-pause" class="play" data-bs-toggle="tooltip" title="Play or Pause music"><i class="fas fa-pause-circle" aria-hidden="true" id="ppsbutt"></i></button><span id="current-time">0:00</span><input type="range" name="seek" id="seek-bar" value="0"><span id="duration">0:00</span>
                 </div>
-            </div>
+            </div><br>
             <div class="marquee-container">
                 <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();" loop>
                     <ul>
@@ -78,19 +100,36 @@
                             <a href="https://www.javascript.com/" target="_blank" rel="noopener noreferrer"><div class="marquee-content javascript rounded-default"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="h-6" draggable="false"> <span>JavaScript</span></div></a>
                         </li>
                         <li>
-                            <a href="https://github.com/" rel="noopener noreferrer"><div class="marquee-content github rounded-default"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="h-6" draggable="false"> <span>GitHub</span></div></a>
+                            <a href="https://github.com/" target="_blank" rel="noopener noreferrer"><div class="marquee-content github rounded-default"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" class="h-6" draggable="false"> <span>GitHub</span></div></a>
+                        </li>
+                        <li>
+                            <a href="https://popper.js.org" target="_blank" rel="noopener noreferrer"><div class="marquee-content popperjs rounded-default"><img src="https://avatars.githubusercontent.com/u/58035617?s=200&v=4" class="h-6" draggable="false"> <span>PopperJS</span></div></a>
+                        </li>
+                        <li>
+                            <a href="https://linux.org" target="_blank" rel="noopener noreferrer"><div class="marquee-content popperjs rounded-default"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" class="h-6" draggable="false"> <span>Linux</span></div></a>
+                        </li>
+                        <li>
+                            <a href="https://git-scm.com" target="_blank" rel="noopener noreferrer"><div class="marquee-content popperjs rounded-default"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" class="h-6" draggable="false"> <span>Git</span></div></a>
                         </li>
                     </ul>
                 </marquee>
             </div><br>
-            <a data-bs-toggle="collapse" href="#collapseOverall">Overall <i class="fa fa-plus-circle" aria-hidden="true" style="font-size: 14px; color: inherit;"></i></a>
-            <div class="collapse" id="collapseOverall">
-                I've been interested in web development since 15 years, but never attempted to create websites until I almost 16 because I never knew where to start. By the end of my education, I hope to secure a rewarding job in web development, as it is a lifelong passion of mine.
+            <div class="collapse-container">
+                <a data-bs-toggle="collapse" href="#collapseOverall"><span data-bs-toggle="tooltip" title="Open this if you want to know a little more about me">Overall <i class="fa fa-plus-circle" aria-hidden="true" style="font-size: 14px;color: inherit;"></i></span></a>
+                <div class="collapse" id="collapseOverall">
+                    <p style="color: white;">I've been interested in web development since 15 years, but never attempted to create websites until I almost 16 because I never knew where to start. By the end of my education, I hope to secure a rewarding job in web development, as it is a lifelong passion of mine.</p>
+                </div>
             </div>
         </div>
     </div>
-<script src="./js/main.js"></script>
-<script src="./js/index.js"></script>
+</main>
+<footer class="center-h">
+    <span style="color: rgba(255, 255, 255, 0.575);">Made with Bootstrap, jQuery, and &hearts; by me</span>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="/js/main.js"></script>
+<script src="/js/index.js"></script>
+<script src="/js/counter.js"></script>
+<script src="/assets/js/snippets.js"></script>
 </body>
 </html>
