--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
 <head>
     <!-- Meta Tags -->
     <meta charset="UTF-8">
@@ -7,6 +7,7 @@
     <meta author="dontkillme">
     <!-- Links -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
@@ -21,7 +22,10 @@
         document.ondragstart = noselect;
         document.onselectstart = noselect;
         document.oncontextmenu = noselect;
-        function noselect() {return false;}
+        function noselect() {
+            return false;
+        }
+    </script>
     </script>
     <!-- Styles -->
     <style media="all" id="fa-v4-font-face">
@@ -60,21 +64,22 @@
                 <img src="./assets/images/avatar.jpg" width="35%" class="rounded-circle">
             </div>
             <div class="nickname">
-                <span class="nickname">dontkillme</span>
+                <span class="nickname">dontkillme</span>&nbsp;
+                <span class="nickname-1">aka</span>
+                <span class="nickname-1">0xday</span>
             </div>
             <div class="social-icons">
                 <a href="https://www.youtube.com/channel/UC8QwVfpZz3lL8mRZoajFQqQ" target="_blank" rel="noopener noreferrer" class="youtube" aria-describedby="tooltip youtube" data-bs-toggle="tooltip" title="YouTube"><i class="fab fa-youtube" aria-hidden="true"></i></a>
                 <a href="https://discordapp.com/users/531462564304125962" target="_blank" rel="noopener noreferrer" class="discord" ><i class="fab fa-discord" aria-hidden="true" data-bs-toggle="tooltip" title="Discord"></i></a>
                 <a href="https://steamcommunity.com/profiles/76561198858868268/" target="_blank" rel="noopener noreferrer" class="steam" data-bs-toggle="tooltip" title="Steam"><i class="fab fa-steam" aria-hidden="true"></i></a>
                 <a href="https://github.com/1dontkillme" target="_blank" rel="noopener noreferrer" class="github" data-bs-toggle="tooltip" title="GitHub"><i class="fab fa-github" aria-hidden="true"></i></a>
-                <a href="https://t.me/m/kZePPo93OTIy" target="_blank" rel="noopener noreferrer" class="telegram" data-bs-toggle="tooltip" title="Telegram"><i class="fab fa-telegram" aria-hidden="true"></i></a>
-                <a href="mailto:abldtesttt@gmail.com" class="email" data-bs-toggle="tooltip" title="E-Mail"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                <a href="https://open.spotify.com/user/314gp2kdxpbuph56nebol6j2gqau?si=de078f2c868946aa" target="_blank" rel="noopener noreferrer" class="spotify" data-bs-toggle="tooltip" title="Spotify"><i class="fab fa-spotify" aria-hidden="true"></i></a>
             </div>
             <hr>
             <div class="player">
                 <audio src="./assets/audio/background-music.mp3" id="audio" autoplay preload="auto"></audio>
                 <div class="controls">
-                    <button type="button" id="liveToastBtn" data-bs-toggle="tooltip" title="Why didn't the music start automatically?"><i class="fas fa-question-circle" aria-hidden="true"></i></button>
+                    <button type="button" id="liveToastBtn" data-bs-toggle="tooltip" title="Why music didn't start automatically?"><i class="bi bi-question-circle"></i></button>
                     <button class="mute" data-bs-toggle="tooltip" title="Mute music"><i class="fa fa-volume-up" aria-hidden="true" id="mute"></i></button>
                     <button id="play-pause" class="play" data-bs-toggle="tooltip" title="Play or Pause music"><i class="fas fa-pause-circle" aria-hidden="true" id="ppsbutt"></i></button><span id="current-time">0:00</span><input type="range" name="seek" id="seek-bar" value="0"><span id="duration">0:00</span>
                 </div>
@@ -115,17 +120,19 @@
                     </ul>
                 </marquee>
             </div><br>
-            <div class="collapse-container">
-                <a data-bs-toggle="collapse" href="#collapseOverall"><span data-bs-toggle="tooltip" title="Open this if you want to know a little more about me">Overall <i class="fa fa-plus-circle" aria-hidden="true" style="font-size: 14px;color: inherit;"></i></span></a>
+            <div class="buttons-collapse-container">
+                <a data-bs-toggle="collapse" href="#collapseOverall"><button class="btn btn-dark btn-sm customsize bigger" id="more"><i class="fa fa-plus-circle" aria-hidden="true" style="font-size: 14px;color: white;" id="circlebutton"></i> More about me</button></span></a>
+                <button class="btn btn-dark btn-sm customsize bigger">NoMeta</button>
+            </div>
                 <div class="collapse" id="collapseOverall">
                     <p style="color: white;">I've been interested in web development since 15 years, but never attempted to create websites until I almost 16 because I never knew where to start. By the end of my education, I hope to secure a rewarding job in web development, as it is a lifelong passion of mine.</p>
                 </div>
-            </div>
+            
         </div>
     </div>
 </main>
-<footer class="center-h">
-    <span style="color: rgba(255, 255, 255, 0.575);">Made with Bootstrap, jQuery, and &hearts; by me</span>
+<footer class="center-h fullwidth">
+    <span style="color: rgba(255, 255, 255, 0.637);">Made with <a href="https://getbootstrap.com/" target="_blank" rel="noopener noreferrer">Bootstrap</a>, <a href="https://jquery.com/" target="_blank" rel="noopener noreferrer">jQuery</a>, and <span style="color: rgb(255, 101, 101);">&hearts;</span> by <a href="https://discordapp.com/users/531462564304125962" target="_blank" rel="noopener noreferrer">me</a></span>
 </footer>
 <!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
