possible fixed nometa path

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div><br>
             <div class="buttons-collapse-container">
                 <a data-bs-toggle="collapse" href="#collapseOverall"><button class="btn btn-dark btn-sm customsize bigger" id="more" data-translate="btnmore"><i class="fa fa-plus-circle" aria-hidden="true" style="font-size: 14px;color: white;" id="circlebutton"></i> More about me</button></span></a>
-                <a href="/nometa.html"><button class="btn btn-dark btn-sm customsize bigger"><i class="bi bi-x-circle-fill" aria-hidden="true" style="font-size: 14px;color: white;"></i> NoMeta</button></a>
+                <a href="./nometa.html"><button class="btn btn-dark btn-sm customsize bigger"><i class="bi bi-x-circle-fill" aria-hidden="true" style="font-size: 14px;color: white;"></i> NoMeta</button></a>
             </div>
                 <div class="collapse" id="collapseOverall">
                     <p style="color: white;" data-translate="moreinfo">I've been interested in web development since 15 years, but never attempted to create websites until I almost 16 because I never knew where to start. By the end of my education, I hope to secure a rewarding job in web development, as it is a lifelong passion of mine.</p>
