Added GitHub Page link in footer

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </div>
 </main>
 <footer class="center-h fullwidth">
-    <span style="color: rgba(255, 255, 255, 0.637);" data-translate="madeby">Made with Bootstrap and <span style="color: rgb(255, 101, 101);">&hearts;</span> by me <span style="color:rgba(153, 153, 153, 0.445);">/</span> <a href="https://github.com/1dontkillme/dontkillmewtf" target="_blank" rel="noopener noreferrer">GitHub</a></span>
+    <span style="color: rgba(255, 255, 255, 0.637);" data-translate="madeby">Made with Bootstrap and <span style="color: rgb(255, 101, 101);">&hearts;</span> by me <span style="color:rgba(153, 153, 153, 0.445);">/</span> <a href="https://github.com/1dontkillme/dontkillmewtf" target="_blank" rel="noopener noreferrer">Source</a></span>
 </footer>
 <!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
