Added discord link in info modal

--- a/nometa.html
+++ b/nometa.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="modal-body">
                     <h3 data-translate="translationsheader">Languages</h3>
-                    <p id="languages" data-translate="translations">This site has been translated into Russian, English, Italian and French, if you need other languages, please DM me.</p>
+                    <p id="languages" data-translate="translations">This site has been translated into Russian, English, Italian and French, if you need other languages, please <a href="https://discordapp.com/users/531462564304125962">DM</a> me.</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-translate="close">Close</button>
