Fixed main page path

--- a/errors/404.html
+++ b/errors/404.html
@@ -34,7 +34,7 @@
             <a href="https://discordapp.com/users/531462564304125962" role="button"><button class="btn btn-dark btn-lg"><i class="fab fa-discord" aria-hidden="true"></i> Discord</button></a>
             <a href="https://t.me/m/kZePPo93OTIy" role="button"><button class="btn btn-dark btn-lg"><i class="fab fa-telegram" aria-hidden="true"></i> Telegram</button></a>
             <a class="btn btn-dark btn-lg" onclick="goBack()" role="button"><i class="fas fa-circle-left"></i> Go back</a>
-            <a href="/" role="button"><button class="btn btn-dark btn-lg"><i class="fas fa-circle-left"></i> Go to main page</button></a>
+            <a href="./" role="button"><button class="btn btn-dark btn-lg"><i class="fas fa-circle-left"></i> Go to main page</button></a>
         </div>
     </div>
 <!-- Scripts -->
