Non Important Changes

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             </div>
                 <div class="collapse" id="collapseOverall">
                     <p style="color: white;" data-translate="moreinfo">I've been interested in web development since 15 years, but never attempted to create websites until I almost 16 because I never knew where to start. By the end of my education, I hope to secure a rewarding job in web development, as it is a lifelong passion of mine.</p>
+                    <!-- <p style="color: white;" id="moreinfo">Loading...</p> -->
                 </div>
             
         </div>
